# bustools

./: .gitignore  .make_bustools_binaries_linux.sh  .make_bustools_binaries_mac.sh  .make_bustools_binaries_windows.sh  CMakeLists.txt  Makefile  Makefile.release  README.md
.github/workflows/: release.yml
dependencies/: Info.txt
dependencies/CppNumericalSolvers-v1/include/cppoptlib/solver/: lbfgsbsolver.h
src/: BUSData.cpp  BUSData.h  CMakeLists.txt  Common.cpp  Common.hpp  bustools_capture.cpp  bustools_capture.h  bustools_clusterhist.cpp  bustools_clusterhist.h  bustools_collapse.cpp  bustools_collapse.h  bustools_compress.cpp  bustools_compress.h  bustools_correct.cpp  bustools_correct.h  bustools_count.cpp  bustools_count.h  bustools_decompress.cpp  bustools_decompress.h  bustools_extract.cpp  bustools_extract.h  bustools_inspect.cpp  bustools_inspect.h  bustools_linker.cpp  bustools_linker.h  bustools_main.cpp  bustools_mash.cpp  bustools_mash.h  bustools_merge.cpp  bustools_merge.h  bustools_predict.cpp  bustools_predict.h  bustools_predquant.cpp  bustools_predquant.h  bustools_project.cpp  bustools_project.h  bustools_sort.cpp  bustools_sort.h  bustools_text.cpp  bustools_text.h  (+7 more)
test/: output.s.bus  run_info.json
test/project/maps/: bc_project_map.txt  rev_bc_project_map.txt  rev_umi_project_map.txt  t2t.txt  trunc_bc_project_map.txt  trunc_rev_bc_project_map.txt  umi_project_map.txt
test/test_cases/: TestCppImplPredict.R  instructionsManualTests.txt  matrix.ec  runAutoTests.txt  runtests.txt  tc0001.txt  tc0002CollapseInput - explained.txt  tc0002CollapseInput.txt  tc0002ExpResult.txt  tc0003 - explained.txt  tc0003.txt  tc0003ExpResult - Explained.txt  tc0003ExpResult.txt  tc0004 - explained.txt  tc0004 calculations.xlsx  tc0004.genes.txt  tc0004.txt  tc0004CUPerCellCalc.xlsx  tc0004ExpResultsBarcodes.txt  tc0004ExpResultsCU.txt  tc0004ExpResultsCUPerCell.txt  tc0004ExpResultsCount.txt  tc0004ExpResultsCountRaw.txt  tc0004ExpResultsHist.txt  tc0004ExpResultsPred.txt  tc0004_explained.txt  transcripts.txt  transcripts_to_genes.txt
